- Se agrego y completo documentacion Swagger/OpenAPI en microservicios. - Se agregaron controllers V2 con respuestas HATEOAS donde faltaban. - Se completaron pruebas de controllers V1 y V2. - Se completaron pruebas de servicios. - Se agregaron pruebas para configuracion Swagger/OpenAPI. - Se ordenaron perfiles dev, prod y test. - Se movieron application-test a src/test/resources. - Se corrigieron configuraciones de Eureka y API Gateway. - Se agrego filtro global X-Request-Id en API Gateway. - Se eliminaron dependencias duplicadas en pom.xml. - Se corrigieron textos con caracteres invalidos. - Se verifico compilacion y pruebas en todos los modulos.